deploy-bd-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-itl
spec:
  selector:
    matchLabels:
      app: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: db-itl
        image: samuelgarciah9/db-itl:v1
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-itl
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306   # Puerto en el que escucha el contenedor MySQL
      targetPort: 3306   # Puerto del contenedor MySQL
  type: ClusterIP
