deploy_api.yaml
apiVersion: apps/v1 # i se Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: api-rest-itl
spec:
  selector:   #permite seleccionar un conjunto de objetos que cumplan las condicione
    matchLabels:
      app: api
  replicas: 3 # indica al controlador que ejecute 3s pods
  template:   # Plantilla que define los containers
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-rest-itl
        image: samuelgarciah9/api_rest_itl:v2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-rest-itl-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000   # Puerto en el que escucha el contenedor Flask
      targetPort: 5000   # Puerto del contenedor Flask
  type: NodePort   # Tipo de servicio NodePort
